@@ -1,3 +1,10 @@
+2016-11-09  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gcc.target/arc/cmem-bit-1.c: New file.
+	* gcc.target/arc/cmem-bit-2.c: New file.
+	* gcc.target/arc/cmem-bit-3.c: New file.
+	* gcc.target/arc/cmem-bit-4.c: New file.
+
 2016-11-09  Martin Liska  <mliska@suse.cz>
 
 	* gcc.dg/tree-ssa/builtins-folding-generic.c (main): Add new
