@@ -1,3 +1,11 @@
+2016-11-09  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* config/arc/arc.md (cmem bit/sign-extend peephole2): New peephole
+	to make better use of cmem loads in the case where a single bit is
+	being accessed.
+	* config/arc/predicates.md (ge_lt_comparison_operator): New
+	predicate.
+
 2016-11-09  Martin Liska  <mliska@suse.cz>
 
 	* fold-const-call.c (fold_const_call): Fix the folding.
